--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "version": "0.9.1",
   "homepage": "http://somerandomdude.com/work/frank",
   "devDependencies": {
-    "grunt-recess":           "~0.1.4"
+    "grunt-recess": "~0.3.0",
+    "grunt-contrib-jshint": "~0.1.0",
+    "grunt-compass": "~0.3.8",
+    "grunt-coffee": "0.0.6",
+    "grunt-contrib-coffee": "~0.3.2",
+    "grunt-contrib-imagemin": "~0.1.0",
+    "grunt-contrib-mincss": "~0.3.2",
+    "grunt-styleguide": "~0.2.1",
+    "svgo-grunt": "0.0.2",
+    "grunt-git-contributors": "~0.1.3",
+    "grunt-coffeelint": "0.0.3"
   }
 }
