--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "Frank",
   "author": "P.J. Onori",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "homepage": "http://somerandomdude.com/work/frank",
   "devDependencies": {
+    "grunt": "~0.4.0",
     "grunt-recess": "~0.3.0",
     "grunt-contrib-jshint": "~0.1.0",
     "grunt-compass": "~0.3.8",
@@ -14,6 +15,7 @@
     "grunt-styleguide": "~0.2.1",
     "svgo-grunt": "0.0.2",
     "grunt-git-contributors": "~0.1.3",
-    "grunt-coffeelint": "0.0.3"
+    "grunt-coffeelint": "0.0.5",
+    "grunt-phpcs": "~0.1.1"
   }
 }
