--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svgo-grunt": "0.0.2",
     "grunt-git-contributors": "~0.1.3",
     "grunt-coffeelint": "0.0.5",
-    "grunt-phpcs": "~0.1.1"
+    "grunt-phpcs": "~0.1.1",
+    "grunt-php": "~0.1.0"
   }
 }
