--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "grunt": "~0.4.0",
     "grunt-recess": "~0.3.0",
     "grunt-contrib-jshint": "~0.1.0",
-    "grunt-compass": "~0.3.8",
     "grunt-contrib-coffee": "~0.6.5",
     "grunt-contrib-imagemin": "~0.1.0",
     "grunt-contrib-mincss": "~0.3.2",
@@ -17,6 +16,7 @@
     "grunt-coffeelint": "0.0.5",
     "grunt-phpcs": "~0.1.1",
     "grunt-php": "~0.1.0",
-    "grunt-csso": "~0.5.0"
+    "grunt-csso": "~0.5.0",
+    "grunt-contrib-sass": "~0.3.0"
   }
 }
