--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-phpcs": "~0.1.1",
     "grunt-php": "~0.1.0",
     "grunt-csso": "~0.5.0",
-    "grunt-contrib-sass": "~0.3.0"
+    "grunt-contrib-sass": "~0.3.0",
+    "grunt-contrib-watch": "~0.3.1"
   }
 }
