--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-php": "~0.1.0",
     "grunt-csso": "~0.5.0",
     "grunt-contrib-sass": "~0.3.0",
-    "grunt-contrib-watch": "~0.3.1"
+    "grunt-contrib-watch": "~0.3.1",
+    "grunt-csscss": "~0.4.0"
   }
 }
