--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "grunt-contrib-coffee": "~0.6.5",
     "grunt-contrib-imagemin": "~0.1.0",
     "grunt-contrib-mincss": "~0.3.2",
+    "grunt-contrib-copy": "~0.4.0",
+    "grunt-contrib-clean": "~0.4.0",
     "grunt-styleguide": "~0.2.1",
     "svgo-grunt": "0.0.3",
     "grunt-git-contributors": "~0.1.3",
@@ -19,6 +21,7 @@
     "grunt-csso": "~0.5.0",
     "grunt-contrib-sass": "~0.3.0",
     "grunt-contrib-watch": "~0.3.1",
-    "grunt-csscss": "~0.4.0"
+    "grunt-csscss": "~0.4.0",
+    "grunt-contrib-compress": "~0.5.0"
   }
 }
