--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-styleguide": "~0.2.1",
     "svgo-grunt": "0.0.3",
-    "grunt-git-contributors": "~0.1.3",
+    "grunt-git-contributors": "~0.1.4",
     "grunt-coffeelint": "0.0.5",
     "grunt-phpcs": "~0.1.1",
     "grunt-php": "~0.1.0",
@@ -22,6 +22,7 @@
     "grunt-contrib-sass": "~0.3.0",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-csscss": "~0.4.0",
-    "grunt-contrib-compress": "~0.5.0"
+    "grunt-contrib-compress": "~0.5.0",
+    "grunt-markdown": "~0.2.0"
   }
 }
