--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-watch": "~0.3.1",
     "grunt-csscss": "~0.4.0",
     "grunt-contrib-compress": "~0.5.0",
-    "grunt-markdown": "~0.2.0"
+    "grunt-markdown": "~0.2.0",
+    "grunt-webp": "~0.0.1"
   }
 }
