--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-recess": "~0.3.0",
-    "grunt-contrib-jshint": "~0.1.0",
+    "grunt-contrib-jshint": "~0.5.2",
     "grunt-contrib-coffee": "~0.6.5",
     "grunt-contrib-imagemin": "~0.1.4",
     "grunt-contrib-mincss": "~0.3.2",
@@ -24,6 +24,9 @@
     "grunt-csscss": "~0.4.0",
     "grunt-contrib-compress": "~0.5.0",
     "grunt-markdown": "~0.2.0",
-    "grunt-webp": "~0.0.1"
+    "grunt-webp": "~0.0.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-csslint": "~0.1.2"
   }
 }
