Added `minimum-stability` to composer.json
- Also removed composer.lock from .gitignore. I believe this file is intended to be checked in, similar to Gemfile.lock. http://stackoverflow.com/questions/12896780/composer-lock-part-of-the-repository

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,6 @@
     "squizlabs/php_codesniffer": "dev-phpcs-fixer",
     "phpmd/phpmd": "dev-master",
     "scrutinizer/php-analyzer": "dev-master"
-  }
+  },
+  "minimum-stability": "dev"
 }
