--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-webp": "~0.0.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-csslint": "~0.1.2"
+    "grunt-contrib-csslint": "~0.1.2",
+    "matchdep": "~0.1.1"
   }
 }
