--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.9.3",
   "homepage": "http://somerandomdude.com/work/frank",
   "devDependencies": {
-    "grunt": "~0.4.0",
+    "grunt": "~0.4.1",
     "grunt-recess": "~0.3.0",
     "grunt-contrib-jshint": "~0.5.2",
     "grunt-contrib-coffee": "~0.6.5",
@@ -13,7 +13,7 @@
     "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-styleguide": "~0.2.1",
-    "svgo-grunt": "0.0.3",
+    "grunt-svgmin": "0.2.0",
     "grunt-git-contributors": "~0.1.4",
     "grunt-coffeelint": "0.0.5",
     "grunt-phpcs": "~0.1.1",
@@ -28,6 +28,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-csslint": "~0.1.2",
-    "matchdep": "~0.1.1"
+    "matchdep": "~0.1.1",
+    "grunt-svgmin": "~0.2.0"
   }
 }
