--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "grunt-contrib-jshint": "~2.0.0",
     "grunt-contrib-coffee": "~2.0.0",
     "grunt-contrib-imagemin": "~3.1.0",
-    "grunt-contrib-mincss": "~0.3.2",
+    "grunt-contrib-cssmin": "~3.0.0",
     "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-clean": "~0.4.0",
     "svgo-grunt": "0.0.3",
